<resources>
    <string name="app_name">Learn Android Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="email_str">Email</string>
    <string name="base_url">$</string>
    <string name="level1_name">Level 1</string>
    <string name="level2_name">Level 2</string>
    <string name="level3_name">Level 3</string>
    <string name="level1_widget_name">Level 1 : \u0020</string>
    <string name="level2_widget_name">Level 2 : \u0020</string>
    <string name="level3_widget_name">Level 3 : \u0020</string>
    <string name="level_current_name">Level %s</string>
    <string name="mypoints_name">My Points</string>
    <string name="add_question_name">Add New Question</string>
    <string name="edit_question_name">Edit Question</string>
    <string name="review_question_name">Review Question</string>
    <string name="review_questions_name">Review Questions</string>
    <string name="solved_questions_name">My Solved Questions</string>
    <string name="solved_questions_title">Solved Questions</string>
    <string name="added_questions_name">My Added Questions</string>
    <string name="added_questions_title">Added Questions</string>
    <string name="reviewed_questions_name">My Reviewed Questions</string>
    <string name="reviewed_questions_title">Reviewed Questions</string>
    <string name="question">Question</string>
    <string name="level">Level</string>
    <string name="typequestion">Type the question</string>
    <string name="submit_for_review">submit for review</string>
    <string name="submitted_for_review">submitted question for review</string>
    <string name="approve_question">Approve</string>
    <string name="question_empty_error">Please type a valid question</string>
    <string name="level_empty_error">Please select the level for the question</string>
    <string name="mysession_attr">mysessionattribute</string>
    <string name="mark_as_spam">Spam</string>
    <string name="mark_as_solved">Solved</string>
    <string name="mark_as_approved">Approve</string>
    <string name="marked_as_approved">Approved</string>
    <string name="mark_as_notapproved">Not Approve</string>
    <string name="action_failed">Action could not be performed</string>
    <string name="plus_name">+10</string>
    <string name="insert_error">Insert could not be performed. Not a valid URI</string>
    <string name="update_error">Update could not be performed. Not a valid URI</string>
    <string name="delete_error">Delete could not be performed. Not a valid URI</string>
    <string name="firebase_connectpath">.info/connected</string>
    <string name="offline_msg">The device is not connected to the network. Please try after connecting to the network</string>
    <string name="connect_listerner_canceled">Firebase Network Connection Listener was cancelled</string>
    <string name="added_empty_list">Add New Questions to the Tracker</string>
    <string name="reviewed_empty_list">Review Questions from different levels</string>
    <string name="solved_empty_list">Solve Questions from different levels</string>
    <string name="empty_tracker_questions">Empty results fetched from the tracker</string>
    <string name="review_inprocess">Still updating the review for the last selected question</string>
    <string name="review_error">Error while updating the review for the selected question</string>
    <string name="review_completed">Successfully updated your review for the question</string>
    <string name="solve_inprocess">Still updating the status for the last selected question to solved</string>
    <string name="my_progress">My Progess</string>

    <!-- constants -->
    <string name="issolved">issolved</string>
    <string name="isadded">isadded</string>
    <string name="isspam">isspam</string>
    <string name="isapproved">isapproved</string>
    <string name="isnotapproved">isnotapproved</string>
    <string name="isreviewed">isreviewed</string>

    <!-- for content description -->
    <string name="screen_name">screen name</string>
    <string name="read_level">question level</string>
    <string name="choose_level">choose the level</string>
    <string name="app_navigationview">Navigation View</string>
    <string name="loading">Loading</string>
    <string name="myprogress_chart">My Progress Chart</string>
    <string name="review_options">choose an option</string>
    <string name="selected">selected</string>
    <string name="questiondesc">Question description</string>
    <string name="not_check_solved">NotcheckSolved</string>
    <string name="questionsview">Questions View</string>
    <string name="app_widget">Android Challenge Tracker Widget</string>
    <string name="myprogress_button">My Progress Button</string>
    <string name="tabs">tracker tab</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
