<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_level01_fragment"
            android:title="@string/level1_name"></item>
        <item
            android:id="@+id/nav_level02_fragment"
            android:title="@string/level2_name"></item>
        <item
            android:id="@+id/nav_level03_fragment"
            android:title="@string/level3_name"></item>
        <item
            android:id="@+id/nav_addquestion_fragment"
            android:title="@string/add_question_name"></item>
        <item
            android:id="@+id/nav_reviewquestions_fragment"
            android:title="@string/review_questions_name"></item>
        <item
            android:id="@+id/nav_points_fragment"
            android:title="@string/mypoints_name"></item>
        <item
            android:id="@+id/nav_solvedquestions_fragment"
            android:title="@string/solved_questions_name"></item>
        <item
            android:id="@+id/nav_myaddedquestions_fragment"
            android:title="@string/added_questions_name"></item>
        <item
            android:id="@+id/nav_myreviewedquestions_fragment"
            android:title="@string/reviewed_questions_name"></item>
    </group>
</menu>