<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView android:id="@+id/reviewer_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reviewer_textView"
        android:id="@+id/reviewer_isspamView"
        android:text="@string/mark_as_spam"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" />
    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reviewer_textView"
        android:id="@+id/isApprovedView"
        android:text="@string/mark_as_approved"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true" />
    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reviewer_textView"
        android:id="@+id/isNotApprovedView"
        android:text="@string/mark_as_notapproved"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>